updated user collection
