# controllers/users.js
@@ -1,6 +1,7 @@
 const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
 
+// GET ALL
 const getAll = async (req, res) => {
   try {
     const result = await mongodb.getDb().db('New_Api_Project').collection('users').find();
@@ -13,6 +14,25 @@ const getAll = async (req, res) => {
   }
 };
 
+// GET SINGLE
+const getSingle = async (req, res) => {
+  try {
+    const userId = new ObjectId(req.params.id);
+    const result = await mongodb.getDb().db('New_Api_Project').collection('users').find({ _id: userId });
+    result.toArray().then((lists) => {
+      if (lists.length > 0) {
+        res.setHeader('Content-Type', 'application/json');
+        res.status(200).json(lists[0]);
+      } else {
+        res.status(404).json({ message: 'User not found.' });
+      }
+    });
+  } catch (err) {
+    res.status(500).json({ message: 'Invalid ID format.' });
+  }
+};
+
+// POST
 const createUser = async (req, res) => {
   try {
     const user = {
@@ -33,5 +53,41 @@ const createUser = async (req, res) => {
   }
 };
 
+// PUT
+const updateUser = async (req, res) => {
+  try {
+    const userId = new ObjectId(req.params.id);
+    const user = {
+      firstName: req.body.firstName,
+      lastName: req.body.lastName,
+      email: req.body.email,
+      favoriteColor: req.body.favoriteColor,
+      birthday: req.body.birthday
+    };
+    const response = await mongodb.getDb().db('New_Api_Project').collection('users').replaceOne({ _id: userId }, user);
+    if (response.modifiedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(404).json('User not found or no changes made.');
+    }
+  } catch (err) {
+    res.status(500).json({ message: err.message });
+  }
+};
 
-module.exports = { getAll, createUser };
+// DELETE
+const deleteUser = async (req, res) => {
+  try {
+    const userId = new ObjectId(req.params.id);
+    const response = await mongodb.getDb().db('New_Api_Project').collection('users').deleteOne({ _id: userId });
+    if (response.deletedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(404).json('No user found with that ID to delete.');
+    }
+  } catch (err) {
+    res.status(500).json({ message: err.message });
+  }
+};
+
+module.exports = { getAll, getSingle, createUser, updateUser, deleteUser };
